--- a/ChiffresEtLettres/ChiffresEtLettres/ChiffresEtLettres.csproj
+++ b/ChiffresEtLettres/ChiffresEtLettres/ChiffresEtLettres.csproj
@@ -38,6 +38,10 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Data.SQLite, Version=1.0.90.0, Culture=neutral, PublicKeyToken=db937bc2d44ff139, processorArchitecture=x86">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>C:\Users\Euregan\Downloads\sqlite-netFx40-binary-bundle-Win32-2010-1.0.90.0\System.Data.SQLite.dll</HintPath>
+    </Reference>
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -70,12 +74,32 @@
     <Compile Include="CompteEstBon.xaml.cs">
       <DependentUpon>CompteEstBon.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Dictionnaire.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="GameEngine.cs" />
+    <Compile Include="Lettre.cs" />
     <Compile Include="Menu.xaml.cs">
       <DependentUpon>Menu.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="MotPlusLong.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="PlayerSetup.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MotPlusLong.xaml.cs">
+      <DependentUpon>MotPlusLong.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Player.cs" />
+    <Compile Include="PlayerSetup.xaml.cs">
+      <DependentUpon>PlayerSetup.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
