Progression de la phase du Compte est bon
Implémentation de la méthode de calcul
Continuation d'implémentation des boutons de l'interface

--- a/ChiffresEtLettres/ChiffresEtLettres/ChiffresEtLettres.csproj
+++ b/ChiffresEtLettres/ChiffresEtLettres/ChiffresEtLettres.csproj
@@ -97,6 +97,7 @@
     <Compile Include="MotPlusLong.xaml.cs">
       <DependentUpon>MotPlusLong.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Number.cs" />
     <Compile Include="Phase.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="PlayerSetup.xaml.cs">
