--- a/Countdown/Countdown/Countdown.csproj
+++ b/Countdown/Countdown/Countdown.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{4747BE7A-627A-45EC-993E-2C09B1F61689}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ChiffresEtLettres</RootNamespace>
-    <AssemblyName>ChiffresEtLettres</AssemblyName>
+    <RootNamespace>Countdown</RootNamespace>
+    <AssemblyName>Countdown</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>Client</TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
@@ -75,16 +75,17 @@
     <Compile Include="CompteEstBonWindow.xaml.cs">
       <DependentUpon>CompteEstBonWindow.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Dictionnaire.cs">
+    <Compile Include="LongestWord.cs" />
+    <Compile Include="Database.cs">
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="GameEngine.cs" />
-    <Compile Include="Lettre.cs" />
+    <Compile Include="Letters.cs" />
     <Compile Include="Menu.xaml.cs">
       <DependentUpon>Menu.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Page Include="MotPlusLong.xaml">
+    <Page Include="LongestWordWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -94,8 +95,8 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MotPlusLong.xaml.cs">
-      <DependentUpon>MotPlusLong.xaml</DependentUpon>
+    <Compile Include="LongestWordWindow.xaml.cs">
+      <DependentUpon>LongestWordWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="Number.cs" />
     <Compile Include="Phase.cs" />
